{{$NEXT}}

0.07_1    2013-10-27 13:37:58 Europe/Minsk
    Minor fixes in distribution, e.g. add git repository url
    New icons for open/opening links

0.06      2013-09-06 23:54:18 Europe/Minsk
    New configuration options: hide_on_startup, hide_from_taskbar, open_url_delay
    Openable links are now opened with delay to improve usability
    The main events window is now more user-friendly, i.e. scrollable
    Minor fixes in the build system (dependencies, minimal perl version)

0.05      2013-08-18 17:19:38 Europe/Minsk
    Just reflect changes in Engine

0.04      2013-07-28 01:17:35 Europe/Minsk
    Added summary level selector
    Added nice graphical icons done by Hanna Mineeva

0.03      2013-07-25 12:32:36 Europe/Minsk
    Update PerlWatcher-Engine to using persistent shelf
